# stagecraft-cli

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.claude/: settings.json
.claude/agents/: architect.md  explorer.md  implementer.md  reviewer.md
.claude/skills/code-review/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/init/: SKILL.md
.claude/skills/setup/: SKILL.md
.claude/skills/ship/: SKILL.md
.derived/codebase-index/by-package/: stagecraft-cli.json  statecraft-cli.json
.derived/codebase-index/by-spec/: 000-bootstrap.json  001-cli-mcp-thesis.json  002-crate-scaffold.json  003-auth-api-client.json  004-governance-verbs.json  005-mcp-server.json  006-template-upgrade-verb.json  007-release-distribution.json
.derived/spec-registry/by-spec/: 000-bootstrap.json  001-cli-mcp-thesis.json  002-crate-scaffold.json  003-auth-api-client.json  004-governance-verbs.json  005-mcp-server.json  006-template-upgrade-verb.json  007-release-distribution.json
.github/workflows/: ci.yml  release.yml
specs/000-bootstrap/: spec.md
specs/001-cli-mcp-thesis/: spec.md
specs/002-crate-scaffold/: spec.md
specs/003-auth-api-client/: spec.md
specs/004-governance-verbs/: spec.md
specs/005-mcp-server/: spec.md
specs/006-template-upgrade-verb/: spec.md
specs/007-release-distribution/: spec.md
src/: api.rs  auth.rs  cli.rs  commands.rs  config.rs  error.rs  main.rs  mcp.rs  output.rs
src/verbs/: fleet.rs  mod.rs  stamp.rs  template.rs  tenants.rs
tests/: cli.rs
