[package]
name = "stagecraft-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Stagecraft governance verbs as CLI subcommands for humans and an MCP server for agents."
repository = "https://github.com/stagecraft-ing/stagecraft-cli"
readme = "README.md"

# spec-spine couples this crate's code paths to its owning spec.
[package.metadata.spec-spine]
spec = "002-crate-scaffold"

# One binary named `stagecraft` (spec 001: the OPC name retires).
[[bin]]
name = "stagecraft"
path = "src/main.rs"

[dependencies]
# CLI parsing and shell completions (no async; that lands in spec 003).
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
# Serialization: stable JSON output shapes are API from the first verb.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Semantic-version comparison for the template upgrade verb (spec 006): the
# compat gate matches a target against the contract's `[requires]` range.
# Pure Rust, no TLS surface; keeps the tree rustls-only.
semver = "1"
# Error handling: anyhow for operational context, thiserror for the taxonomy.
anyhow = "1"
thiserror = "2"
# Platform-appropriate config paths.
directories = "6"
# Async runtime and HTTP client for the control-plane API (spec 003).
# rustls only, never native-tls (CLAUDE.md: no OpenSSL on customer machines).
tokio = { version = "1", features = ["rt-multi-thread", "time", "net"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "cookies",
    "rustls-tls",
] }

[dev-dependencies]
# Mock HTTP server so `cargo test` never gates on a live control plane (spec 003 §1).
httpmock = "0.7"
